# Meeting-Notes

./: .gitignore  LICENSE  NOTICE  README.md
backend/: BUILD_INSTRUCTIONS.md  desktop.spec  desktop_onefile.spec  desktop_onefile_optimized.spec  desktop_optimized.spec  pyproject.toml
backend/app/: config.py  deps.py  desktop.py  main.py
backend/app/api/: devices.py  meetings.py  settings.py
backend/app/models/: action_item.py  app_settings.py  audio_file.py  base.py  meeting.py  setting.py  summary.py  summary_reference.py  transcript_segment.py
backend/app/repositories/: action_items.py  audio_files.py  meetings.py  settings.py  summaries.py  transcripts.py
backend/app/services/: asr_engine.py  asr_model_manager.py  audio_capture.py  cuda_runtime_manager.py  model_manager.py  prompt_manager.py  summarization_service.py  transcription_service.py
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/public/: LICENSE.txt
frontend/src/: App.tsx  main.tsx
frontend/src/components/: MainApp.tsx  Markdown.tsx  MeetingDetail.tsx  Settings.tsx  Sidebar.tsx  TranscriptViewer.tsx
frontend/src/context/: DownloadContext.tsx
frontend/src/services/: api.ts
scripts/: build_desktop.ps1  dev_desktop.ps1
